--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "lint:tests": "eslint test/ --ext .ts",
     "svg": "svg-sprite-generate -d src/assets/ -o dist/sprite.svg",
     "pull_tools": "git submodule update --init --recursive",
-    "checkout_tools": "git submodule foreach git pull origin master",
-    "test:e2e": "yarn build && cypress run"
+    "checkout_tools": "git submodule foreach git pull origin master"
   },
   "author": "CodeX",
   "license": "Apache-2.0",
